@@ -1,1 +1,3 @@
-gcovLaunchConfiguration.name.0=Code Coverage
+gcovLaunchConfiguration.name.0=Gcov
+gcovLaunchConfiguration.description=Code Coverage
+gcovLaunchConfiguration.information=Note : requires compilation of your program using the \"-ftest-coverage -fprofile-arcs\" options.
