@@ -1,4 +1,4 @@
 ProviderLaunchShortcut_0=Could not find a provider for profiling type :
-ProviderPreferencesPage_0=Profiling Preferences
+ProviderPreferencesPage_0=C/C++ Linux Tools Profiling Preferences
 ProviderPreferencesPage_1=Choose default launch provider
 ProviderOptionsTab_0=No plug-in provider found in launch configuration
