@@ -1,4 +1,6 @@
 #Properties file for org.eclipse.linuxtools.valgrind.helgrind
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Helgrind Plug-in
-LaunchConfiguration.name.0 = Synchronization Checking [Valgrind]
+LaunchConfiguration.name.0 = Helgrind
+LaunchConfiguration.description.0 = Synchronization Checking
+LaunchConfiguration.information.0 = Note: uses Valgrind as a back-end tool.
